[gd_scene load_steps=13 format=2]

[ext_resource path="res://level1TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Dropzone.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]
[ext_resource path="res://scripts/Level1.gd" type="Script" id=4]
[ext_resource path="res://assets/_moon.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/level1.mp3" type="AudioStream" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
background_color = Color( 1, 0, 0, 1 )
glow_enabled = true
glow_bloom = 0.04

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="Animation" id=3]
resource_name = "float"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ForegroundMoving:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 25 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.03391, 369.081 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 647.125, 10 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 616, 544, 0, 0, 0, 0, 648, 544, 0, 0, 0, 0, 680, 544, 0, 0, 0, 0, 800, 448, 0, 0, 0, 0, 840, 448, 0, 0, 0, 0, 896, 448, 0, 0, 0, 0, 1024, 352, 0, 0, 0, 0, 1080, 352, 0, 0, 0, 0, 1040, 320, 0, 0, 0, 0, 880, 248, 0, 0, 0, 0, 840, 248, 0, 0, 0, 0, 744, 128, 0, 0, 0, 0, 608, 120 )
}

[node name="Level1" type="Node2D" groups=[
"level",
]]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 90.2244, 94.0244 )
texture = ExtResource( 3 )
texture_scale = 1.56
color = Color( 0.945098, 0, 1, 1 )
energy = 0.8
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0117647, 0.176471, 0.337255, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Moon" type="Sprite" parent="."]
modulate = Color( 27.74, 2.33, 1, 1 )
position = Vector2( 148.937, 118.506 )
scale = Vector2( 1.99887, 1.99887 )
texture = ExtResource( 5 )

[node name="Foreground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1114131, 20, 0, 1114132, 20, 0, 1114133, 20, 0, 1179667, 24, 0, 1179668, 24, 0, 1179669, 24, 0, 1245203, 21, 0, 1245204, 21, 0, 1245205, 21, 0, 1310727, 1, 0, 1310728, 2, 0, 1310729, 2, 0, 1310730, 2, 0, 1310731, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310734, 2, 0, 1310735, 2, 0, 1310736, 2, 0, 1310737, 2, 0, 1310738, 2, 0, 1310739, 2, 0, 1310740, 2, 0, 1310741, 2, 0, 1310742, 2, 0, 1310743, 2, 0, 1310744, 2, 0, 1310745, 2, 0, 1310746, 2, 0, 1310747, 2, 0, 1310748, 2, 0, 1310749, 2, 0, 1310750, 2, 0, 1310751, 2, 0, 1310752, 3, 0, 1376259, 1, 0, 1376260, 2, 0, 1376261, 2, 0, 1376262, 2, 0, 1376263, 2, 0, 1376264, 2, 0, 1376265, 2, 0, 1376266, 2, 0, 1376267, 2, 0, 1376268, 2, 0, 1376269, 2, 0, 1376270, 2, 0, 1376271, 2, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 2, 0, 1376275, 2, 0, 1376276, 2, 0, 1376277, 2, 0, 1376278, 2, 0, 1376279, 2, 0, 1376280, 2, 0, 1376281, 2, 0, 1376282, 2, 0, 1376283, 2, 0, 1376284, 2, 0, 1376285, 2, 0, 1376286, 2, 0, 1376287, 2, 0, 1376288, 2, 0, 1376289, 2, 0, 1376290, 2, 0, 1376291, 2, 0, 1376292, 3, 0, 1441792, 2, 0, 1441793, 2, 0, 1441794, 2, 0, 1441795, 2, 0, 1441796, 2, 0, 1441797, 2, 0, 1441798, 2, 0, 1441799, 2, 0, 1441800, 2, 0, 1441801, 2, 0, 1441802, 2, 0, 1441803, 2, 0, 1441804, 2, 0, 1441805, 2, 0, 1441806, 2, 0, 1441807, 2, 0, 1441808, 2, 0, 1441809, 2, 0, 1441810, 2, 0, 1441811, 2, 0, 1441812, 2, 0, 1441813, 2, 0, 1441814, 2, 0, 1441815, 2, 0, 1441816, 2, 0, 1441817, 2, 0, 1441818, 2, 0, 1441819, 2, 0, 1441820, 2, 0, 1441821, 2, 0, 1441822, 2, 0, 1441823, 2, 0, 1441824, 2, 0, 1441825, 2, 0, 1441826, 2, 0, 1441827, 2, 0, 1441828, 2, 0, 1441829, 2, 0, 1441830, 2, 0, 1441831, 2, 0 )

[node name="ForegroundMoving" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 262160, 10, 0, 262161, 8, 0, 262162, 8, 0, 262163, 8, 0, 262164, 8, 0, 262165, 8, 0, 262166, 8, 0, 262167, 9, 0, 327696, 16, 0, 327697, 11, 0, 327698, 11, 0, 327699, 11, 0, 327700, 11, 0, 327701, 11, 0, 327702, 11, 0, 327703, 12, 0, 393232, 15, 0, 393233, 13, 0, 393234, 13, 0, 393235, 13, 0, 393236, 13, 0, 393237, 13, 0, 393238, 13, 0, 393239, 14, 0, 524299, 10, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 9, 0, 524312, 10, 0, 524313, 8, 0, 524314, 8, 0, 524315, 8, 0, 524316, 9, 0, 589835, 15, 0, 589836, 13, 0, 589837, 13, 0, 589838, 13, 0, 589839, 14, 0, 589848, 15, 0, 589849, 13, 0, 589850, 13, 0, 589851, 13, 0, 589852, 14, 0, 720900, 10, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 9, 0, 720927, 10, 0, 720928, 8, 0, 720929, 8, 0, 720930, 8, 0, 720931, 9, 0, 786436, 15, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 14, 0, 786463, 15, 0, 786464, 13, 0, 786465, 13, 0, 786466, 13, 0, 786467, 14, 0, 917515, 10, 0, 917516, 8, 0, 917517, 8, 0, 917518, 8, 0, 917519, 9, 0, 917528, 10, 0, 917529, 8, 0, 917530, 8, 0, 917531, 8, 0, 917532, 9, 0, 983051, 15, 0, 983052, 13, 0, 983053, 13, 0, 983054, 13, 0, 983055, 14, 0, 983064, 15, 0, 983065, 13, 0, 983066, 13, 0, 983067, 13, 0, 983068, 14, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="P1Dropzone" parent="ForegroundMoving" groups=[
"player1",
"player1_dropzone",
] instance=ExtResource( 2 )]
position = Vector2( 655.028, 115.021 )

[node name="P2Dropzone" parent="ForegroundMoving" groups=[
"player2",
"player2_dropzone",
] instance=ExtResource( 2 )]
position = Vector2( 655.028, 115.021 )

[node name="FlagSpawnPoint" type="Position2D" parent="."]
position = Vector2( 670.903, 508.607 )
__meta__ = {
"_gizmo_extents_": 60.0
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/float = SubResource( 3 )

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2( 640.996, 366.925 )

[node name="Mask" type="CollisionShape2D" parent="Walls"]
position = Vector2( 646.012, -0.563141 )
shape = SubResource( 4 )

[node name="Mask2" type="CollisionShape2D" parent="Walls"]
position = Vector2( -647.088, -1.40198 )
shape = SubResource( 4 )

[node name="Mask3" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2.72614, -376.363 )
shape = SubResource( 5 )

[node name="Mask4" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0.84259, 361.114 )
shape = SubResource( 5 )

[node name="AudioBackground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
autoplay = true

[node name="AIPath" type="Path2D" parent="."]
curve = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="spawn_flag" from="ForegroundMoving/P1Dropzone" to="." method="_on_P1Dropzone_spawn_flag"]
[connection signal="spawn_flag" from="ForegroundMoving/P2Dropzone" to="." method="_on_P2Dropzone_spawn_flag"]
